martusdev-476: This is a workaround to fix the empty space that apears to the right and below the context menu popup window.  By removing styling and making popup background color match the empty space, the bug is no longer visible.

--- a/source/org/martus/client/swingui/jfx/css/bur/SetupWizard.css
+++ b/source/org/martus/client/swingui/jfx/css/bur/SetupWizard.css
@@ -339,6 +339,11 @@
        linear-gradient(#35536b, #597489);
         }
 
+.choice-box .context-menu {
+  -fx-background-color: #e6e7e9;
+  -fx-effect: null;
+}
+
 .choice-box .label {
      -fx-text-fill: black;
 }
